--- a/PGMS.Web/wwwroot/Content/site/site.less
+++ b/PGMS.Web/wwwroot/Content/site/site.less
@@ -1,3 +1,4 @@
-@import "site.theme.less";
+﻿@import "site.theme.less";
 @import "site.mixins.less";
 @import "site.administration.less";
+@import "site.erp.less";
