Added new Page suppliers with basic crud operations #9

--- a/PGMS.Web/wwwroot/Content/site/site.css
+++ b/PGMS.Web/wwwroot/Content/site/site.css
@@ -7794,3 +7794,9 @@ section.content > .s-DataGrid {
 .s-Erp-PartnerTypesDialog .caption {
   width: 150px;
 }
+.s-Erp-SuppliersDialog > .size {
+  width: 650px;
+}
+.s-Erp-SuppliersDialog .caption {
+  width: 150px;
+}
