Added account attachments for file uploads #6 fixed initial migration and splitted attachments for companies and accounts

--- a/PGMS.Web/wwwroot/Content/site/site.css
+++ b/PGMS.Web/wwwroot/Content/site/site.css
@@ -7812,6 +7812,18 @@ section.content > .s-DataGrid {
 .s-Erp-CompaniesDialog .caption {
   width: 150px;
 }
+.s-Erp-AttachmentsDialog > .size {
+  width: 650px;
+}
+.s-Erp-AttachmentsDialog .caption {
+  width: 150px;
+}
+.s-Erp-AccountAttachmentsDialog > .size {
+  width: 650px;
+}
+.s-Erp-AccountAttachmentsDialog .caption {
+  width: 150px;
+}
 .s-NotesEditor {
   border: 1px solid #ccc;
   border-radius: 4px;
