--- a/PGMS.Web/wwwroot/Content/site/site.erp.less
+++ b/PGMS.Web/wwwroot/Content/site/site.erp.less
@@ -20,3 +20,13 @@
     > .size { width: 650px; }
     .caption { width: 150px; }
 }
+
+.s-Erp-AttachmentsDialog {
+    > .size { width: 650px; }
+    .caption { width: 150px; }
+}
+
+.s-Erp-AccountAttachmentsDialog {
+    > .size { width: 650px; }
+    .caption { width: 150px; }
+}
