Added orange color for accounts that are vip #6

--- a/PGMS.Web/wwwroot/Content/site/site.css
+++ b/PGMS.Web/wwwroot/Content/site/site.css
@@ -1,4 +1,4 @@
-/*
+﻿/*
  * Core: General Layout Style
  * -------------------------
  */
@@ -7875,4 +7875,7 @@ section.content > .s-DataGrid {
 }
 .s-NoteDialog .ui-dialog-content {
   padding-bottom: 10px;
+}
+.is-vip {
+  background-color: #ff8630 !important;
 }
