Added products db table and migration and page and so on #10

--- a/PGMS.Web/wwwroot/Content/site/site.css
+++ b/PGMS.Web/wwwroot/Content/site/site.css
@@ -1,4 +1,4 @@
-﻿/*
+/*
  * Core: General Layout Style
  * -------------------------
  */
@@ -7822,6 +7822,12 @@ section.content > .s-DataGrid {
   width: 650px;
 }
 .s-Erp-AccountAttachmentsDialog .caption {
+  width: 150px;
+}
+.s-Erp-ProductsDialog > .size {
+  width: 650px;
+}
+.s-Erp-ProductsDialog .caption {
   width: 150px;
 }
 .s-NotesEditor {
