Added payment types #19 db table page and so  on with migration for Orders, OrderTypes, OrderDetails #11

--- a/PGMS.Web/wwwroot/Content/site/site.css
+++ b/PGMS.Web/wwwroot/Content/site/site.css
@@ -7830,6 +7830,12 @@ section.content > .s-DataGrid {
 .s-Erp-ProductsDialog .caption {
   width: 150px;
 }
+.s-Erp-PaymentTypesDialog > .size {
+  width: 650px;
+}
+.s-Erp-PaymentTypesDialog .caption {
+  width: 150px;
+}
 .s-NotesEditor {
   border: 1px solid #ccc;
   border-radius: 4px;
