Added order status db entity and page and permissions  #12

--- a/PGMS.Web/wwwroot/Content/site/site.erp.less
+++ b/PGMS.Web/wwwroot/Content/site/site.erp.less
@@ -40,3 +40,8 @@
     > .size { width: 650px; }
     .caption { width: 150px; }
 }
+
+.s-Erp-OrderStatusesDialog {
+    > .size { width: 650px; }
+    .caption { width: 150px; }
+}
