Added orders page with permissions and so on #11

--- a/PGMS.Web/wwwroot/Content/site/site.css
+++ b/PGMS.Web/wwwroot/Content/site/site.css
@@ -7842,6 +7842,12 @@ section.content > .s-DataGrid {
 .s-Erp-OrderStatusesDialog .caption {
   width: 150px;
 }
+.s-Erp-OrdersDialog > .size {
+  width: 650px;
+}
+.s-Erp-OrdersDialog .caption {
+  width: 150px;
+}
 .s-NotesEditor {
   border: 1px solid #ccc;
   border-radius: 4px;
