--- a/PGMS.Web/wwwroot/Content/site/site.erp.less
+++ b/PGMS.Web/wwwroot/Content/site/site.erp.less
@@ -50,3 +50,8 @@
     > .size { width: 650px; }
     .caption { width: 150px; }
 }
+
+.s-Erp-OrderDetailsDialog {
+    > .size { width: 650px; }
+    .caption { width: 150px; }
+}
