Added budgets page and rows and etc #15

--- a/PGMS.Web/wwwroot/Content/site/site.css
+++ b/PGMS.Web/wwwroot/Content/site/site.css
@@ -7854,6 +7854,12 @@ section.content > .s-DataGrid {
 .s-Erp-OrderDetailsDialog .caption {
   width: 150px;
 }
+.s-Erp-BudgetsDialog > .size {
+  width: 650px;
+}
+.s-Erp-BudgetsDialog .caption {
+  width: 150px;
+}
 .s-NotesEditor {
   border: 1px solid #ccc;
   border-radius: 4px;
