Added emails page, added sending email functionality with attachments #17

--- a/PGMS.Web/wwwroot/Content/site/site.css
+++ b/PGMS.Web/wwwroot/Content/site/site.css
@@ -7878,6 +7878,12 @@ section.content > .s-DataGrid {
 .s-Erp-OutsideOrdersDialog .caption {
   width: 150px;
 }
+.s-Erp-SentEmailsDialog > .size {
+  width: 650px;
+}
+.s-Erp-SentEmailsDialog .caption {
+  width: 150px;
+}
 .s-NotesEditor {
   border: 1px solid #ccc;
   border-radius: 4px;
