--- a/PGMS.Web/wwwroot/Content/site/site.erp.less
+++ b/PGMS.Web/wwwroot/Content/site/site.erp.less
@@ -75,3 +75,8 @@
     > .size { width: 650px; }
     .caption { width: 150px; }
 }
+
+.s-Erp-SentEmailsDialog {
+    > .size { width: 650px; }
+    .caption { width: 150px; }
+}
