Added bulgarian translation #22 added order per status in Reports #18

--- a/PGMS.Web/Modules/Erp/Reports/ReportsIndex.cshtml
+++ b/PGMS.Web/Modules/Erp/Reports/ReportsIndex.cshtml
@@ -20,4 +20,14 @@
             });
         </script>
 }
+        
+        @if (Authorization.HasPermission(PermissionKeys.Reports.OrdersPerStatus))
+        {
+            <div id="ordersPerStatus"></div>
+            <script>
+                jQuery(document).ready(function () {
+                    new PGMS.Erp.OrdersPerStatus($("#ordersPerStatus"), {});
+                });
+            </script>
+        }
     </div>
