--- a/PGMS.Web/wwwroot/Content/site/site.css
+++ b/PGMS.Web/wwwroot/Content/site/site.css
@@ -7884,6 +7884,12 @@ section.content > .s-DataGrid {
 .s-Erp-SentEmailsDialog .caption {
   width: 150px;
 }
+.s-Erp-OutsideOrderAttachmentsDialog > .size {
+  width: 650px;
+}
+.s-Erp-OutsideOrderAttachmentsDialog .caption {
+  width: 150px;
+}
 .s-NotesEditor {
   border: 1px solid #ccc;
   border-radius: 4px;
