Fixed dashboard timepickers, removed companies from account and orders , added email and phone to orders and to quicksearch for orders

--- a/PGMS.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
+++ b/PGMS.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
@@ -4,10 +4,10 @@
     ViewData["PageId"] = "Dashboard";
 }
 
-@section Head {
+@*@section Head {
     @Html.StyleBundle("Pages/Dashboard")
     @Html.ScriptBundle("Pages/Dashboard")
-}
+}*@
 
 @section ContentHeader {
     <h1>@LocalText.Get("Navigation.Dashboard")<small>@Html.Raw(Texts.Site.Dashboard.ContentDescription)</small></h1>
