--- a/PGMS.Web/wwwroot/Content/site/site.css
+++ b/PGMS.Web/wwwroot/Content/site/site.css
@@ -1,4 +1,4 @@
-/*
+﻿/*
  * Core: General Layout Style
  * -------------------------
  */
@@ -7959,4 +7959,15 @@ section.content > .s-DataGrid {
 }
 .order-status-id .select2-container {
   min-width: 200px;
+}
+.s-MyOrdersGrid {
+  margin-bottom: 20px;
+}
+.s-MyOrdersGrid > .grid-container {
+  height: 300px;
+  flex: 1 1 auto;
+}
+.s-MyOutsideOrdersGrid > .grid-container {
+  height: 300px;
+  flex: 1 1 auto;
 }
