--- a/PGMS.Web/wwwroot/Content/site/site.less
+++ b/PGMS.Web/wwwroot/Content/site/site.less
@@ -75,3 +75,15 @@
 .order-status-id .select2-container {
     min-width: 200px;
 }
+.s-MyOrdersGrid{
+    margin-bottom: 20px;
+}
+.s-MyOrdersGrid > .grid-container {
+    height: 300px;
+    flex: 1 1 auto;
+}
+
+.s-MyOutsideOrdersGrid > .grid-container {
+    height: 300px;
+    flex: 1 1 auto;
+}
