Added Sums in footer in order details grid for Quadrature, Quontity, Discount, AdditionalCosts and Line total, fixed #51 #40

--- a/PGMS.Web/wwwroot/Content/site/site.css
+++ b/PGMS.Web/wwwroot/Content/site/site.css
@@ -7848,6 +7848,9 @@ section.content > .s-DataGrid {
 .s-Erp-OrdersDialog .caption {
   width: 150px;
 }
+.s-Erp-OrdersDialog .grid-container {
+  min-height: 220px;
+}
 .s-Erp-OrderDetailsDialog > .size {
   width: 850px;
 }
