--- a/PGMS.Web/wwwroot/Content/site/site.erp.less
+++ b/PGMS.Web/wwwroot/Content/site/site.erp.less
@@ -47,8 +47,17 @@
 }
 
 .s-Erp-OrdersDialog {
-    > .size { width: 850px; }
-    .caption { width: 150px; }
+    > .size {
+        width: 850px;
+    }
+
+    .caption {
+        width: 150px;
+    }
+
+    .grid-container {
+        min-height: 220px;
+    }
 }
 
 .s-Erp-OrderDetailsDialog {
