--- a/PGMS.Web/wwwroot/Content/site/site.less
+++ b/PGMS.Web/wwwroot/Content/site/site.less
@@ -8,6 +8,7 @@
     border: 1px solid #ccc;
     border-radius: 4px;
 
+
     ul {
         padding: 0;
         min-height: 110px;
@@ -60,7 +61,12 @@
 
 .s-NoteDialog {
     > .size {
-        .widthAndMin(750px);
+        width: 850px;
+        height: 700px;
+    }
+
+    .caption {
+        width: 150px;
     }
 
     .ui-dialog-content {
